| Bug #9103 | Erroneous data truncation warnings on multi-table updates | ||
|---|---|---|---|
| Submitted: | 10 Mar 2005 21:00 | Modified: | 28 Apr 2005 17:59 |
| Reporter: | Dean Ellis | ||
| Status: | Closed | ||
| Category: | Server: Optimizer | Severity: | S2 (Serious) |
| Version: | 4.1.11 | OS: | |
| Assigned to: | Sergey Petrunia | Target Version: | |
[10 Mar 2005 21:00]
Dean Ellis
[18 Apr 2005 3:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24095
[20 Apr 2005 10:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24161
[20 Apr 2005 10:44]
Sergey Petrunia
Pushed into 4.1.12 and 5.0.5 trees.
[28 Apr 2005 17:59]
Paul DuBois
Noted in 4.1.12, 5.0.5 changelogs.
