sql/sql_select.h
@@ -445,7 +445,7 @@ public:
   const char *name() const { return "const"; }
 };
 
-bool cp_buffer_from_ref(TABLE_REF *ref);
+bool cp_buffer_from_ref(THD *thd, TABLE_REF *ref);
 bool error_if_full_join(JOIN *join);
 int report_error(TABLE *table, int error);
 int safe_index_read(JOIN_TAB *tab);
